gccida/g0/get_last_value_validate
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_last_value_validate/src/combine.c:11966:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_last_value_validate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_last_value_validate/src/combine.c:11967:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_last_value_validate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_last_value_validate/src/combine.c:11990:34: error: use of undeclared identifier 'machine_mode'
*loc = gen_rtx_fmt_e( CLOBBER, ( machine_mode)*( ( unsigned __int8 *)x + 2), const_int_rtx[64]); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_last_value_validate/src/combine.c:12010:34: error: use of undeclared identifier 'machine_mode'
*loc = gen_rtx_fmt_e( CLOBBER, ( machine_mode)*( ( unsigned __int8 *)x + 2), const_int_rtx[64]); 
                                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_last_value_validate/src/obj/combine.o] Error 1
